1.Update README and change repo name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "three-practical-cases",
+  "name": "three-chamber",
   "version": "1.0.0",
   "description": "A lib contains practical use cases using three.js and relative.",
   "main": "index.js",
