--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@tweenjs/tween.js": "21.1.1",
+    "gl-matrix": "^3.4.3",
     "parcel": "^2.14.0",
     "three": "^0.160.0"
   },
